Ramp speed fix align and maxchars

--- a/web/app/assets/stylesheets/stage-step.css.scss
+++ b/web/app/assets/stylesheets/stage-step.css.scss
@@ -537,6 +537,11 @@
 						font-weight: bold;
 						border: none;
 					}
+
+          .minified-font {
+            font-size: 37px;
+            vertical-align: middle;
+          }
 				}
 				.dots {
 					float: left;
