--- a/web/public/assets/stage-step.css
+++ b/web/public/assets/stage-step.css
@@ -558,6 +558,11 @@
   border: none;
 }
 /* line 541, ../../app/assets/stylesheets/stage-step.css.scss */
+.edit-stage-step-container .bottom-half .middle-ground .bottom-common-item .data-part .minified-font {
+  font-size: 37px;
+  vertical-align: middle;
+}
+/* line 546, ../../app/assets/stylesheets/stage-step.css.scss */
 .edit-stage-step-container .bottom-half .middle-ground .bottom-common-item .dots {
   float: left;
   width: 23px;
@@ -565,13 +570,13 @@
   padding-top: 28px;
   padding-left: 5px;
 }
-/* line 551, ../../app/assets/stylesheets/stage-step.css.scss */
+/* line 556, ../../app/assets/stylesheets/stage-step.css.scss */
 .edit-stage-step-container .bottom-half .next {
   width: 71px;
   height: 60px;
   float: left;
 }
-/* line 556, ../../app/assets/stylesheets/stage-step.css.scss */
+/* line 561, ../../app/assets/stylesheets/stage-step.css.scss */
 .edit-stage-step-container .bottom-half .next img {
   padding-right: 30px;
   padding-bottom: 31px;
